@@ -3,7 +3,6 @@ package bio.terra.workspace.service.workspace;
 import static bio.terra.workspace.service.workspace.flight.WorkspaceFlightMapKeys.ControlledResourceKeys.SOURCE_WORKSPACE_ID;
 
 import bio.terra.common.iam.SamUser;
-import bio.terra.policy.model.TpsPaoGetResult;
 import bio.terra.policy.model.TpsPolicyInputs;
 import bio.terra.workspace.app.configuration.external.BufferServiceConfiguration;
 import bio.terra.workspace.app.configuration.external.FeatureConfiguration;
@@ -46,7 +45,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -318,7 +316,7 @@ public class WorkspaceService {
             "listRequesterRoles");
     Optional<WsmIamRole> highestRole = WsmIamRole.getHighestRole(uuid, requesterRoles);
     Preconditions.checkState(
-        highestRole.isPresent(), String.format("Workspace %s missing roles", uuid.toString()));
+        highestRole.isPresent(), String.format("Workspace %s missing roles", uuid));
     return highestRole.get();
   }
 
@@ -621,7 +619,7 @@ public class WorkspaceService {
             // SAM does not always use lowercase emails, so lowercase everything here before the
             // contains check below
             .map(String::toLowerCase)
-            .collect(Collectors.toList());
+            .toList();
     if (!roleMembers.contains(targetUserEmail)) {
       return;
     }
